# DistributionFitr

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  DESCRIPTION  NAMESPACE  README.md  ReadMe.Rmd  ReadMe.md  all_families.R  all_families.Rda  getFamilies.R  getFamily.R  getParams.R  get_and_optim_param_test.R  get_families.R  get_params.R  globalfit.R  informationCriteria.R  loglik.R  objects.R  optimParam.R  optimParam_plot.R  optimParamsContinuous.R  optimParamsDiscrete.R  optim_discrete_params.R  optim_params_wrapper.R  output.R  pyproject.toml  utils.R
R/: .#globalfit.R  all_families.R  all_families.rds  evalWithoutTime.R  fitting_sanity_check.R  getFamilies.R  getFamily.R  getParams.R  globalfit.R  hardcopy.0  loglik.R  objects.R  optimParam_plot.R  optimParamsContinuous.R  optimParamsDiscrete.R  output.R  source_all.R  utils.R
data/: all_families.R
inst/: CITATION  CITATION.R
man/: DistributionFitr.Rd  fitDist.Rd  getFamilies.Rd  getFamily.Rd  getParams.Rd  get_params.Rd  globalFit.Rd  globalfit-class.Rd  globalfit.Rd  globalfitSummary-class.Rd  install.all_DistributionFitr.Rd  loglik.Rd  main.Rd  optimParam.Rd  optimParam_plot.Rd  optimParams-class.Rd  optimParamsContinuous.Rd  optimParamsDiscrete.Rd  optim_params_wrapper.Rd  summary.globalfit.Rd
private/: all_families.R  all_families.rds  devtools.R  globalfit.R  helper_VM_results.R  helper_install_packages.R  how-to-contribute.Rmd  how-to-contribute.md  install.all.Rd  installPackages.R  linuxPackages.txt  loglik.Rd  main.Rd  makeCommands.R  optimParam_plot.R  optimParamsContinuous.Rd  output1.txt  (+12 more)
(+14035 files in other folders)
