[tool.poetry]
name = "DistributionFitR"
version = "0.1.0"
description = ""
authors = ["kernmo <moritz.kern@basf.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.6.0"
pylint = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
